--- a/wp-content/themes/desconferencia/style.css
+++ b/wp-content/themes/desconferencia/style.css
@@ -86,6 +86,7 @@ input, select {
 body {
     font: 13px/1.231 sans-serif;
     *font-size: small;
+    min-width: 980px;
 }
 
 select, input, textarea, button {
@@ -509,8 +510,8 @@ body {
     height: 100%;
 }
 
-#fbLike {
-    top: 3px;
+.fbLike, .twitter-share-button {
+    height: 20px;
 }
 
 /*** posts ***/
@@ -679,6 +680,7 @@ p.commentCount {
     float: left;
     margin-bottom: 6px;
     margin-left: 12px;
+    margin-top: 0;
 }
 
 p.small {
